api of post,comment and likes added
